--- a/arch/arm64/boot/dts/freescale/fsl-ls1046a.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-ls1046a.dtsi
@@ -184,6 +184,13 @@
 					<GIC_SPI 132 IRQ_TYPE_EDGE_RISING>;
 		};
 
+		modem_wdog: modem_wdog@0 {
+                        compatible = "modem_wdog";
+                        reg = <0x0 0x0 0x0 0x0>;
+                        interrupts = <GIC_SPI 150 IRQ_TYPE_EDGE_RISING>;
+                        modem-reset-gpio = <&gpio2 18 1>;
+		};
+
 		qspi: spi@1550000 {
 			compatible = "fsl,ls1021a-qspi";
 			#address-cells = <1>;
