--- a/arch/arm64/boot/dts/freescale/fsl-la1224-rdb.dts
+++ b/arch/arm64/boot/dts/freescale/fsl-la1224-rdb.dts
@@ -71,56 +71,56 @@
 		P00 {
 			gpio-hog;
 			gpios = <0 GPIO_ACTIVE_LOW>;
-			output-high;
+			output-low;
 			line-name = "i2c_rst_phy1_10ge_b";
 		};
 
 		P01 {
 			gpio-hog;
 			gpios = <1 GPIO_ACTIVE_LOW>;
-			output-high;
+			output-low;
 			line-name = "i2c_rst_phy2_10ge_b";
 		};
 
 		P02 {
 			gpio-hog;
 			gpios = <2 GPIO_ACTIVE_LOW>;
-			output-high;
+			output-low;
 			line-name = "i2c_m2_slot1_rst_b";
 		};
 
 		P03 {
 			gpio-hog;
 			gpios = <3 GPIO_ACTIVE_LOW>;
-			output-high;
+			output-low;
 			line-name = "i2c_m2_slot2_rst_b";
 		};
 
 		P04 {
 			gpio-hog;
 			gpios = <4 GPIO_ACTIVE_LOW>;
-			output-high;
+			output-low;
 			line-name = "i2c_ephy1_rst_b";
 		};
 
 		P05 {
 			gpio-hog;
 			gpios = <5 GPIO_ACTIVE_LOW>;
-			output-high;
+			output-low;
 			line-name = "i2c_lea_6t_rst_b";
 		};
 
 		P06 {
 			gpio-hog;
 			gpios = <6 GPIO_ACTIVE_LOW>;
-			output-high;
+			output-low;
 			line-name = "i2c_modem_rst_b";
 		};
 
 		P07 {
 			gpio-hog;
 			gpios = <7 GPIO_ACTIVE_LOW>;
-			output-high;
+			output-low;
 			line-name = "i2c_la1224_rst_b";
 		};
 
@@ -141,14 +141,14 @@
 		P12 {
 			gpio-hog;
 			gpios = <10 GPIO_ACTIVE_HIGH>;
-			output-low;
+			output-high;
 			line-name = "lx2_uart_en";
 		};
 
 		P13 {
 			gpio-hog;
-			gpios = <11 GPIO_ACTIVE_LOW>;
-			output-high;
+			gpios = <11 GPIO_ACTIVE_HIGH>;
+			input;
 			line-name = "mdm_brd_gpio_04";
 		};
 
