dts: arm64: la1224-rdb: Added externel interuupt info
Added Watchdog,LA1224 and LA1246 externel interrupt info
in device nodes

Signed-off-by: Ravinder Bisht <ravinder.bisht@nxp.com>

--- a/arch/arm64/boot/dts/freescale/fsl-la1224-rdb.dts
+++ b/arch/arm64/boot/dts/freescale/fsl-la1224-rdb.dts
@@ -436,3 +436,15 @@
 	phy-connection-type = "rgmii-id";
 };
 
+&modem_wdog {
+	status = "okay";
+};
+
+&modem_tti1 {
+	status = "okay";
+};
+
+&modem_tti2 {
+	status = "okay";
+};
+
