ls1046atp1: add redstone support to EAR0.1C
Performs below:
  - Adds redstone support to EAR0.1C
  - Ports redstone patches from WNC_TP1_BSP0.1C_Codebase

Signed-off-by: Rajesh Bhagat <rajesh.bhagat@nxp.com>

--- a/arch/arm64/boot/dts/freescale/fsl-ls1046a.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-ls1046a.dtsi
@@ -524,7 +524,8 @@
 			interrupts = <GIC_SPI 48 IRQ_TYPE_LEVEL_HIGH>;
 			clocks = <&clockgen 4 0>;
 			clock-names = "ipg";
-			status = "disabled";
+//#			status = "disabled";
+			status = "ok";
 		};
 
 		lpuart1: serial@2960000 {
@@ -533,7 +534,8 @@
 			interrupts = <GIC_SPI 49 IRQ_TYPE_LEVEL_HIGH>;
 			clocks = <&clockgen 4 1>;
 			clock-names = "ipg";
-			status = "disabled";
+//#			status = "disabled";
+			status = "ok";
 		};
 
 		lpuart2: serial@2970000 {
