--- a/arch/arm64/boot/dts/freescale/Makefile
+++ b/arch/arm64/boot/dts/freescale/Makefile
@@ -39,12 +39,16 @@ dtb-$(CONFIG_ARCH_LAYERSCAPE) += fsl-ls1046a-rdb-usdpaa.dtb
 dtb-$(CONFIG_ARCH_LAYERSCAPE) += fsl-ls1046a-abdn.dtb
 dtb-$(CONFIG_ARCH_LAYERSCAPE) += fsl-ls1046a-abdn-sdk.dtb
 dtb-$(CONFIG_ARCH_LAYERSCAPE) += fsl-ls1046a-abdn-usdpaa.dtb
+dtb-$(CONFIG_ARCH_LAYERSCAPE) += fsl-ls1046a-abdn-sdk-usdpaa.dtb
+dtb-$(CONFIG_ARCH_LAYERSCAPE) += fsl-ls1046a-abdn-usdpaa-sdk.dtb
 dtb-$(CONFIG_ARCH_LAYERSCAPE) += fsl-ls1046a-tp1.dtb
 dtb-$(CONFIG_ARCH_LAYERSCAPE) += fsl-ls1046a-tp1-sdk.dtb
 dtb-$(CONFIG_ARCH_LAYERSCAPE) += fsl-ls1046a-tp1-usdpaa.dtb
 dtb-$(CONFIG_ARCH_LAYERSCAPE) += fsl-la1246-rdb.dtb
 dtb-$(CONFIG_ARCH_LAYERSCAPE) += fsl-la1246-rdb-sdk.dtb
 dtb-$(CONFIG_ARCH_LAYERSCAPE) += fsl-la1246-rdb-usdpaa.dtb
+dtb-$(CONFIG_ARCH_LAYERSCAPE) += fsl-la1246-rdb-usdpaa-sdk.dtb
+dtb-$(CONFIG_ARCH_LAYERSCAPE) += fsl-la1246-rdb-sdk-usdpaa.dtb
 dtb-$(CONFIG_ARCH_LAYERSCAPE) += fsl-la1246-rdb-sdk-shared-usdpaa.dtb
 dtb-$(CONFIG_ARCH_LAYERSCAPE) += fsl-ls1088a-qds.dtb
 dtb-$(CONFIG_ARCH_LAYERSCAPE) += fsl-ls1088a-rdb.dtb
