dts: ls1046awrdb: Temporarily disable ethernet mac9 node
Temporarily disabling ethernet mac9 node as XFI at MAC9
is not working currently and a crash is observed during
Linux-boot with MAC9 enabled.
MAC-9 will be re-enabled back once crash is resolved.

Signed-off-by: Pankit Garg <pankit.garg@nxp.com>

--- a/arch/arm64/boot/dts/freescale/fsl-ls1046a-wrdb.dts
+++ b/arch/arm64/boot/dts/freescale/fsl-ls1046a-wrdb.dts
@@ -141,6 +141,7 @@
 	ethernet@f0000 { /* 10GEC1 */
 		fixed-link = <0 1 1000 0 0>;
 		phy-connection-type = "xgmii";
+		status = "disabled";
 	};
 
 	ethernet@f2000 {
