--- a/arch/arm64/boot/dts/freescale/fsl-ls1046a-wrdb-sdk.dts
+++ b/arch/arm64/boot/dts/freescale/fsl-ls1046a-wrdb-sdk.dts
@@ -54,6 +54,9 @@
 	ethernet@3 {
 		status = "disabled";
 	};
+	ethernet@8 {
+		status = "disabled";
+	};
 	ethernet@9 {
 		compatible = "fsl,dpa-ethernet";
 		fsl,fman-mac = <&enet7>;
