align dts with 4.14-rt
Signed-off-by: Hemant Agrawal <hemant.agrawal@nxp.com>

--- a/arch/arm64/boot/dts/freescale/fsl-la1224-rdb.dts
+++ b/arch/arm64/boot/dts/freescale/fsl-la1224-rdb.dts
@@ -302,7 +302,7 @@
 		P17 {
 			gpio-hog;
 			gpios = <15 GPIO_ACTIVE_LOW>;
-			output-high;
+			output-low;
 			line-name = "si5341_lol_b";
 		};
 	};
