--- a/arch/arm64/configs/lsdk.config
+++ b/arch/arm64/configs/lsdk.config
@@ -92,6 +92,9 @@ CONFIG_NET_SCHED=y
 CONFIG_NET_SCH_TBF=y
 CONFIG_SFP=y
 CONFIG_PHY_FSL_LYNX_28G=y
+CONFIG_NET_SCH_INGRESS=y
+CONFIG_NET_ACT_POLICE=y
+CONFIG_NET_ACT_GACT=y
 CONFIG_BPF_SYSCALL=y
 CONFIG_BPF_JIT_ALWAYS_ON=y
 CONFIG_XDP_SOCKETS=y
