--- a/arch/arm64/configs/lsdk.config
+++ b/arch/arm64/configs/lsdk.config
@@ -175,6 +175,7 @@ CONFIG_NET_CLS_FLOWER=y
 CONFIG_NET_EMATCH=y
 CONFIG_NET_EMATCH_STACK=32
 CONFIG_NET_EMATCH_U32=y
+CONFIG_NET_EMATCH_META=y
 CONFIG_NET_CLS_ACT=y
 CONFIG_NET_ACT_PEDIT=y
 CONFIG_NET_ACT_SKBEDIT=y
