configs: enable gate action of Qos and fair queueing
Gate action is needed for setting Qci gate, enable it in default.

Signed-off-by: Xiaoliang Yang <xiaoliang.yang_1@nxp.com>

--- a/arch/arm64/configs/lsdk.config
+++ b/arch/arm64/configs/lsdk.config
@@ -95,6 +95,7 @@ CONFIG_PHY_FSL_LYNX_28G=y
 CONFIG_NET_SCH_INGRESS=y
 CONFIG_NET_ACT_POLICE=y
 CONFIG_NET_ACT_GACT=y
+CONFIG_NET_ACT_GATE=y
 CONFIG_BPF_SYSCALL=y
 CONFIG_BPF_JIT_ALWAYS_ON=y
 CONFIG_XDP_SOCKETS=y
