arm64: configs: enable AF_XDP sockets configs
enable AF_XDP sockets in imx and layerscape config files.

Signed-off-by: Yannick Vignon <yannick.vignon@nxp.com>
Signed-off-by: Marouen Ghodhbane <marouen.ghodhbane@nxp.com>

--- a/arch/arm64/configs/lsdk.config
+++ b/arch/arm64/configs/lsdk.config
@@ -197,3 +197,8 @@ CONFIG_NFC_NXP_PN5XX=m
 #IVSHMEM
 CONFIG_IVSHMEM_NET=y
 CONFIG_UIO_IVSHMEM=y
+
+# AF_XDP
+CONFIG_BPF_SYSCALL=y
+CONFIG_BPF_JIT_ALWAYS_ON=y
+CONFIG_XDP_SOCKETS=y
