Baremetal: IPI: IPI support for ARM64
Signed-off-by: Yi Zhao <yi.zhao@nxp.com>
Signed-off-by: Liu Gang <Gang.Liu@nxp.com>
Signed-off-by: Jianchao Wang <jianchao.wang@nxp.com>
Signed-off-by: Changming Huang <jerry.huang@nxp.com>

--- a/drivers/irqchip/Kconfig
+++ b/drivers/irqchip/Kconfig
@@ -613,4 +613,8 @@ config APPLE_AIC
 	  Support for the Apple Interrupt Controller found on Apple Silicon SoCs,
 	  such as the M1.
 
+config BAREMETAL
+	bool
+	depends on ARM_GIC || ARM_GIC_V3
+
 endmenu
