--- a/arch/arm64/configs/lsdk.config
+++ b/arch/arm64/configs/lsdk.config
@@ -193,3 +193,7 @@ CONFIG_USB_NET_AX88179_178A=y
 CONFIG_KVM=n
 CONFIG_PREEMPT_RT=y
 CONFIG_NFC_NXP_PN5XX=m
+
+#IVSHMEM
+CONFIG_IVSHMEM_NET=y
+CONFIG_UIO_IVSHMEM=y
