--- a/arch/arm/configs/imx_v7_defconfig
+++ b/arch/arm/configs/imx_v7_defconfig
@@ -594,3 +594,5 @@ CONFIG_TRUSTED_KEYS_TPM=n
 CONFIG_TRUSTED_KEYS_TEE=n
 CONFIG_TRUSTED_KEYS_CAAM=n
 CONFIG_TRUSTED_KEYS_DCP=y
+
+CONFIG_PREEMPT_RT=y
