--- a/arch/arm64/configs/lsdk.config
+++ b/arch/arm64/configs/lsdk.config
@@ -170,6 +170,7 @@ CONFIG_NETFILTER_INGRESS=y
 CONFIG_NET_SCHED=y
 CONFIG_NET_SCH_MULTIQ=y
 CONFIG_NET_SCH_MQPRIO=y
+CONFIG_NET_SCH_TAPRIO=y
 CONFIG_NET_CLS=y
 CONFIG_NET_CLS_BASIC=y
 CONFIG_NET_CLS_MATCHALL=y
